<resources>
    <string name="app_name" translatable="false">Ethazi_mac</string>
    <string name="txtlogina">Logina</string>
    <string name="btnSartu">Sartu</string>
    <string name="txterabiltzailesartu">Sartu erabiltzaile bat</string>
    <string name="txtsartupasahitza">Sartu pasahitza</string>
    <string name="txtostatuakpantalla">Ostatuak</string>
    <string name="txtCampings">Campings</string>
    <string name="txtAgroturismos">Agroturismos</string>
    <string name="txtCasasRurales">Casas Rurales</string>
    <string name="txtAlbergues">Albergues</string>
    <string name="txtlogKop" translatable="false">Logela kopuru</string>
    <string name="btnMapaikusi">Mapan ikusi</string>
    <string name="btnReserba">Reserba egin</string>
    <string name="btnErregistratu">Erregistratu</string>
    <string name="txtopcional">Optzionala</string>
    <string name="txtemail">Sartu mail bat</string>
    <string name="txttelefono">Sartu telefono bat</string>
    <string name="txtizenabizen">Sartu izena eta abizena</string>
    <string name="txtErregistratuda">Erregistratu da</string>
    <string name="txtKontuaSortuNahi">Kontu bat sortu nahi duzu?</string>
    <string name="errorPasahitzakBerdin">Pasahitzak ez dira berdinak</string>
    <string name="errorDatuakBete">Datu guztiak bete behar dira</string>
    <string name="txtHasieraData">Sartu hasiera data</string>
    <string name="txtAmaieraData">Sartu amaiera data</string>
    <string name="txtGaukop" translatable="false">Sartu gau kopurua</string>
    <string name="errorSartuOndoDatak">Datak ondo sartu</string>
    <string name="txtReserbaEginda">Reserba egin da</string>
    <string name="errorTxartologin">Login okerra</string>
    <string name="user_location_permission_explanation">Usuario</string>
    <string name="user_location_permission_not_granted">Usuario</string>
</resources>
