<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Erregistratu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editTextizenabizen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="103dp"
            android:layout_marginEnd="97dp"
            android:layout_marginRight="97dp"
            android:ems="10"
            android:hint="@string/txtizenabizen"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonErregis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTexttelefonoa"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="146dp"
            android:layout_marginRight="146dp"
            android:layout_marginBottom="-1dp"
            android:text="@string/btnErregistratu" />

        <EditText
            android:id="@+id/editTextmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPass2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="97dp"
            android:layout_marginRight="97dp"
            android:ems="10"
            android:hint="@string/txtemail"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editPass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPass1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            android:ems="10"
            android:hint="@string/txtsartupasahitza"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editPass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextuser"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            android:ems="10"
            android:hint="@string/txtsartupasahitza"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="194dp"
            android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp"
            android:ems="10"
            android:hint="@string/txterabiltzailesartu"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTexttelefonoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextmail"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="103dp"
            android:layout_marginRight="103dp"
            android:ems="10"
            android:hint="@string/txttelefono"
            android:inputType="number" />

    </RelativeLayout>

</ScrollView>